--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="icon_rest.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Al Santuario - espai gastronomic i vins | Xàbia</title>
     <meta name="description" content="En el corazón del Cabo de San Antonio, dentro de la Reserva Natural del Montgó en Xàbia, nuestro restaurante ofrece una experiencia mediterránea auténtica en plena conexión con la naturaleza. ">
