--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Al Santuario - espai gastronomic i vins | Xàbia</title>
     <meta name="description" content="En el corazón del Cabo de San Antonio, dentro de la Reserva Natural del Montgó en Xàbia, nuestro restaurante ofrece una experiencia mediterránea auténtica en plena conexión con la naturaleza. ">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Inter:wght@400;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
